--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@ body {
   text-align: center;
 }
 
-h1, h2, p, ul {
+h1, h2, p, ul, li, h3 {
 	font-family: 'Montserrat', sans-serif;
 	color: blue;
+  background-color: pink
 
+}
+
+.mail {
+  font-family: 'Montserrat', sans-serif;
+  color: blue;
+}
+
+.icon {
+  color: blue
 }
 
 .margin-50px {
@@ -22,11 +32,8 @@ h1, h2, p, ul {
   height: 300px;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px grey;
-}
-
-div {
-	background: lightpink;
+  box-shadow: 5px 5px 10px blue;
+  background-color: pink
 }
 
 .pres {
@@ -34,13 +41,15 @@ div {
   border-radius: 10px;
   padding: 30px 70px;
   box-shadow: 5px 5px 10px grey;
+  background-color: pink
 }
 
-.form, .diplomes, .qualites, .exp, .comp {
+.form, .diplomes, .qualites, .exp, .comp, .type {
   text-align: left;
   border-radius: 10px;
   padding: 30px 70px;
   box-shadow: 5px 5px 10px grey;
+  background-color: pink
 }
 
 .my-btn {
@@ -53,6 +62,7 @@ div {
   font-weight: bold;
   box-shadow: 5px 5px 10px grey;
   text-decoration: none
+
 }
 
 .my-btn:hover {
@@ -93,4 +103,51 @@ div {
 .part2 {
 	display: flex;
 	background: blue;
+  justify-content: space-between;
 }
+
+.part3 {
+  display: flex;
+  background: blue;
+  justify-content: space-between;
+   text-align: left;
+  border-radius: 10px;
+  padding: 30px 70px;
+  box-shadow: 5px 5px 10px grey;
+  background-color: pink
+
+}
+
+.footer {
+  background: pink;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: blue;
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: blue;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+}
+.footer .fa-heart {
+  color: #D23333;
+}
+
+.photo2 {
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px blue;
+  background-color: pink
+  
